﻿<h3>Version 01.03.00</h3>
<p><strong>Date Released:</strong> 04/12/2016</p>
<ul>
	<li>Feature: Updated to support DNN 8</li>
</ul>