@@ -1,0 +1,8 @@
+﻿<%@ Control Language="vb" AutoEventWireup="false" CodeBehind="AboutMe.ascx.vb" Inherits="WillStrohl.Modules.ContentSlider.AboutView" %>
+
+<div class="dnnClear" style="margin: 0 auto; width: 800px; max-width: 800px;">
+    <h1><%=GetLocalizedString("About.Text") %></h1>
+    <p><%=GetLocalizedString("ThankYou.Text") %></p>
+    <p style="text-align: center;"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3T7UPHNMW5AB8" target="_blank"><img alt="" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"/></a></p>
+</div>
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
