@@ -1,0 +1,17 @@
+﻿'------------------------------------------------------------------------------
+' <auto-generated>
+'     This code was generated by a tool.
+'
+'     Changes to this file may cause incorrect behavior and will be lost if
+'     the code is regenerated. 
+' </auto-generated>
+'------------------------------------------------------------------------------
+
+Option Strict On
+Option Explicit On
+
+Namespace WillStrohl.Modules.ContentSlider
+    
+    Partial Public Class AboutView
+    End Class
+End Namespace
