@@ -1,0 +1,20 @@
+﻿/*
+
+INSTALL SQL PROVIDER SCRIPT
+
+Content Slider Module for DotNetNuke
+Version: 01.03.01
+Author: Will Strohl
+E-Mail: will.strohl@gmail.com
+Website: http://www.willstrohl.com
+
+Copyright 2011-2016 Will Strohl
+
+Release Notes:
+  Placeholder.
+
+*/
+
+
+
+/* END OF FILE */
