@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="6.0">
   <packages>
-    <package name="WillStrohl.ContentSlider" type="Module" version="01.03.00">
+    <package name="WillStrohl.ContentSlider" type="Module" version="01.03.01">
       <friendlyName>Content Slider</friendlyName>
       <description>
         <![CDATA[<p>This module allows you to quickly and easily add the popular "content slider" functionality to your DotNetNuke website. This feature enables the ability to have banner and content dynamically cycle on your DNN web pages. This is completely a client-side solution, not Flash.</p>]]>
@@ -64,13 +64,18 @@
             </script>
             <script type="Install">
               <path>Providers\DataProviders\SqlDataProvider</path>
-              <name>01.02.01.SqlDataProvider</name>
+              <name>01.03.00.SqlDataProvider</name>
               <version>01.03.00</version>
+            </script>
+            <script type="Install">
+              <path>Providers\DataProviders\SqlDataProvider</path>
+              <name>01.03.01.SqlDataProvider</name>
+              <version>01.03.01</version>
             </script>
             <script type="UnInstall">
               <path>Providers\DataProviders\SqlDataProvider</path>
               <name>Uninstall.SqlDataProvider</name>
-              <version>01.03.00</version>
+              <version>01.03.01</version>
             </script>
           </scripts>
         </component>
@@ -119,6 +124,16 @@
                     <controlKey>Sliders</controlKey>
                     <controlSrc>DesktopModules/WillStrohl.ContentSlider/Sliders.ascx</controlSrc>
                     <supportsPartialRendering>False</supportsPartialRendering>
+                    <controlTitle />
+                    <controlType>Edit</controlType>
+                    <iconFile />
+                    <helpUrl />
+                  </moduleControl>
+                  <moduleControl>
+                    <controlKey>AboutMe</controlKey>
+                    <controlSrc>DesktopModules/WillStrohl.ContentSlider/AboutMe.ascx</controlSrc>
+                    <supportsPartialRendering>False</supportsPartialRendering>
+                    <supportsPopUps>True</supportsPopUps>
                     <controlTitle />
                     <controlType>Edit</controlType>
                     <iconFile />
@@ -188,6 +203,10 @@
             <file>
               <path>Providers\DataProviders\SqlDataProvider</path>
               <name>01.03.00.SqlDataProvider</name>
+            </file>
+            <file>
+              <path>Providers\DataProviders\SqlDataProvider</path>
+              <name>01.03.01.SqlDataProvider</name>
             </file>
             <file>
               <path>Providers\DataProviders\SqlDataProvider</path>
